# PyWikiTree

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: ancestor_tree.py  backup_to_gedcom.py  bio_searcher.py  bridge_finder.py  bridge_finder_config.json  export_gedcom.py  find_potential_connections.py  watchlist_explorer.py
scripts/: smoke_test_public.py
src/pywikitree/: __init__.py  client.py  enums.py  exceptions.py  gedcom.py  utils.py
src/pywikitree.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_client.py
