[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywikitree"
version = "0.1.0"
description = "Python client for the WikiTree API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PyWikiTree Contributors" }]
dependencies = [
  "rapidfuzz>=3.14.3",
  "requests>=2.32.3",
]

[project.urls]
Homepage = "https://github.com/wikitree/wikitree-api"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
  "E", "F", "I", "B", "UP", "SIM", "RUF",
]
ignore = [
  "RUF001", "RUF002", "RUF003",
]
